--- a/public/custom.css
+++ b/public/custom.css
@@ -1,99 +1,268 @@
-.customMainBody{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-.customBody{
-   flex:1;
-   background-color: #DADBDD;
-   display: flex;
-}
-/*Carousel Divs*/
-.customCarouselDiv{
-    max-width: 1600px;
-    min-height: 900px;
-    padding-left: 50px;
-}
-/*Colors Divs*/
+@media only screen and (max-width: 320px){
+    .customMainBody{
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        min-width: 320px;
+    }
+    .customBody{
+        flex:1;
+        background-color: #DADBDD;
+        display: block;
+     }
 
-.customColorsDiv{
-    min-width: 740px;
-    max-width: 800px;
-    max-height: 950px;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: red;
-    margin-left: 60px;
+    .customCarouselDiv{
+        max-width: 320px;
+        min-width: 280px;
+        min-height: 160px;
+        padding: 0px;
+        margin-left:5px;
+        margin-right: 5px;
+            }
+    /*Colors Divs*/
+    
+    .customColorsDiv{
+        min-width: 260px;
+        max-width: 320px;
+        min-height: 700px;
+        margin:10px;
+        padding: 0px;
+        padding-bottom: 10px;
+        background-color: white;
+        border-radius: 10px;
+    }
+    .customAllColorsDiv{
+        padding: 10px;
+        padding-top: 0px;
+        max-width: 320px;
+        min-width: 280px;
+        min-height: 90px;
+     }
+    .customDivColor{      /*min-width: 270px; min-height: 40px;    min-width: 128px*/   
+        min-width: 128px;
+        max-width: 330px;  
+        min-height: 40px;
+        border-radius: 10px;
+        margin: 5px;
+    }
+    /**/
+    .customDivColor:hover{
+        min-width: 124px;
+        max-width: 326px;  
+        max-height: 36px;
+        min-height: 36px;
+        border: 2px solid grey;
+    }
+    /*Text and Stuff*/
+    .customTitle{
+        padding-top: 70px;
+        padding-bottom: 30px;
+        padding-left: 20px;
+        font-size: 21px;
+        background-color: #DADBDD;
+    }
+    .customH1{
+        min-width: 260px;
+        height: 30px;
+        font-size: 23px;
+        padding: 18px;
+        padding-right: 0px;
+        background-color: blue;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    .customColorName{
+        font-size: 16px;
+        font-weight: 400;
+        padding-left: 8px;
+    }
+    
+    /*Carousel*/
+    .customCarouselImg{
+        border-radius: 10px;
+    }
+    .selected{
+        border-radius: 10px;
+    }
+    .thumb{
+        border-radius: 20px;
+        border-color: blue;
+    }
+    
+    /*Colors*/
+
+    .customBoxes{
+        background-color: blueviolet;
+        min-width: 100%;
+        min-height: 90px;
+        max-height: 300px;
+        display: inline-flex;
+        gap: 5px
+    }
+    .customColor{
+        background-color: aquamarine;
+        min-width: 138px;  /*min-width: 280px;  min-width: 138px;*/
+        max-width: 370px;
+        max-height: 70px;
+        padding-top: 5px;
+    }
+    .customDisplayOff{
+        display: none;
+    }
 }
-.customAllColorsDiv{
-    padding: 10px;
-    max-width: 720px;
-    min-width: 450px;
-    min-height: 300px;
-    background-color: beige;
- }
-.customColor{
-    background-color: aquamarine;
-    max-width: 360px;
-    padding-top: 5px;
-    display: inline-block;
-    gap:50px
-}
-.customDivColor{
-    max-width: 350px;
-    min-width: 300px;
-    max-height: 40px;
-    min-height: 40px;
-    background-color: red;
-    border-radius: 10px;
-    margin: 5px;
-}
-/**/
-.customDivColor:hover{
-    max-width: 346px;
-    min-width: 296px;
-    max-height: 36px;
-    min-height: 36px;
-    border: 2px solid grey;
+
+@media only screen and (min-width: 320px){
+    .customMainBody{
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+    .customBody{
+        flex:1;
+        background-color: #DADBDD;
+     }
+    .customCarouselDiv{
+        max-width: 760px;
+        min-width: 280px;
+        min-height: 160px;
+        padding: 0px;
+        margin-left:5px;
+        margin-right: 5px;
+    }
+    /*Colors Divs*/
+    
+    .customColorsDiv{
+        min-width: 260px;
+        max-width: 760px;
+        min-height: 700px;
+        margin:10px;
+        padding: 0px;
+        padding-bottom: 0px;
+        background-color: white;
+        border-radius: 10px;
+    }
+    .customAllColorsDiv{
+        padding: 10px;
+        padding-top: 0px;
+        max-width: 760px;
+        min-width: 280px;
+        min-height: 90px;
+             }
+    .customDivColor{      /*min-width: 270px; min-height: 40px;    min-width: 128px*/   
+        min-width: 128px;
+        max-width: 330px;  
+        min-height: 40px;
+        border-radius: 10px;
+        margin: 5px;
+    }
+    /**/
+    .customDivColor:hover{
+        min-width: 124px;
+        max-width: 326px;  
+        max-height: 36px;
+        min-height: 36px;
+        border: 2px solid yellow;
+    }
+    /*Text and Stuff*/
+    .customTitle{
+        padding-top: 70px;
+        padding-bottom: 30px;
+        padding-left: 20px;
+        font-size: 21px;
+        background-color: #DADBDD;
+    }
+    .customH1{
+        min-width: 260px;
+        height: 30px;
+        font-size: 23px;
+        padding: 18px;
+        padding-right: 0px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    .customColorName{
+        font-size: 16px;
+        font-weight: 400;
+        padding-left: 8px;
+    }
+    
+    /*Carousel*/
+    .customCarouselImg{
+        border-radius: 10px;
+    }
+    .selected{
+        border-radius: 10px;
+    }
+    .thumb{
+        border-radius: 20px;
+    }
+    
+    /*Colors*/
+
+    .customBoxes{
+        min-width: 100%;
+        min-height: 90px;
+        max-height: 300px;
+        display: inline-flex;
+        gap: 5px
+    }
+    .customColor{
+        min-width: 138px;  /*min-width: 280px;  min-width: 138px;*/
+        max-width: 370px;
+        max-height: 70px;
+        padding-top: 5px;
+    }
 }
 
 
-
-/*Text and Stuff*/
-.customTitle{
-    padding-top: 70px;
-    padding-bottom: 30px;
-    padding-left: 200px;
-    font-size: 28px;
-    background-color: #DADBDD;
-}
-.customH1{
-    width: 100%;
-    height: 50px;
-    font-size: 35px;
-    padding: 20px;
-    padding-right: 0px;
-    background-color: blue;
-}
-.customColorName{
-    font-size: 16px;
-    font-weight: 400;
-    padding-left: 8px;
+@media only screen and (min-width: 800px){
+    .customCarouselDiv{
+        min-width: 250px;
+        max-width: 400px;
+    }
+    .customColorsDiv{
+        min-width: 260px;
+        max-width: 1100px;
+    }
+    .customMainDivs{
+        display: inline-flex;
+    }
 }
 
-/*Carousel*/
-.customCarouselImg{
-    border-radius: 10px;
+@media only screen and (min-width: 1000px){
+    .customCarouselDiv{
+        min-width: 30%;
+        max-width: 670px;
+    }
+    .customColorsDiv{
+        min-width: 300px;
+        max-width: 700px;
+    }
 }
-.selected{
-    border-radius: 10px;
+@media only screen and (min-width: 1250px){
+    .customCarouselDiv{
+        min-width: 30%;
+        max-width: 670px;
+    }
+    .customColorsDiv{
+        min-width: 500px;
+        max-width: 1100px;
+    }
 }
-.thumb{
-    border-radius: 20px;
-    border-color: blue;
+@media only screen and (min-width: 1400px){
+    .customCarouselDiv{
+        min-width: 30%;
+        max-width: 1700px;
+    }
+    .customColorsDiv{
+        min-width: 500px;
+        max-width: 1100px;
+    }
 }
 
-
-/*Colors*/
-
+@media only screen and (min-width: 2200px){
+    .customCarouselDiv{
+        max-width: 1780px;
+    }
+}
 
