--- a/public/styles.css
+++ b/public/styles.css
@@ -71,6 +71,7 @@ body{
 
 .underHeaderON{
   position: absolute;
+  z-index: 200;
   background: #181818;
   animation: underHeaderr .25s;
   width: 100%; height: 500px;
@@ -89,6 +90,7 @@ body{
 
 .underHeaderOFF{
   position: absolute;
+  z-index: 200;
   background: #181818;
   animation: underHeader .25s;
   width: 100%; height: 0px;
@@ -112,12 +114,13 @@ body{
 
 .underButtonA{
    font-size:17px;
-   color: white;
+
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-style: normal;
    transition: color 0.3s ease-out 0s;
    text-decoration-line: none;
+   color: white;
 }
 .underButtonB{
   width: 150px;
@@ -128,7 +131,6 @@ body{
   font-style: normal;
   text-decoration-line: none;
 }
-
 .Row1{
   display: none;
   position: relative;
@@ -138,7 +140,20 @@ body{
   height: 350px;
   display: block;
   line-height: 50px;
-}
+  overflow: hidden;
+  animation: row111 0.35s;
+  }
+  @keyframes row111 {
+    from {
+      height: 0px;
+    }
+    to {
+      height: 350px;
+    }
+  }
+  
+
+
 .container{
   display:inline-flex;
   flex-flow: row wrap;
@@ -305,9 +320,11 @@ a{
 
 .Row2{
   left:270px;
+  min-width: 250px;
 }
 .Row3{
   left: 460px;
+  min-width: 250px;
 }
 
 /*Adding Styled Scrollbar*/
