--- a/public/styles.css
+++ b/public/styles.css
@@ -71,7 +71,7 @@ body{
 
 .underHeaderON{
   position: absolute;
-  z-index: 200;
+  z-index: 1;
   background: #181818;
   animation: underHeaderr .25s;
   width: 100%; height: 500px;
@@ -157,9 +157,9 @@ body{
 .container{
   display:inline-flex;
   flex-flow: row wrap;
-  position: absolute;
-  left: 80px;
-  top:-27px;
+  position: fixed;
+  left: 150px;
+  top:62px;
   min-width: 2400px;
   height: 420px;
   padding-left: 100px;
