--- a/public/home.css
+++ b/public/home.css
@@ -132,15 +132,15 @@
       
     }
     .homeInstagram3{
-        background-image: url("https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/432303299_800132325478454_244486591407538585_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=nnPR_JQ85ywAX96fIfK&_nc_ht=scontent-lhr8-1.xx&oh=00_AfB2XvdJWDIwCYbSj17aSwMriNR0ZDfNSP4OUHOmAdIEvg&oe=660D4D8E");
+        background-image: url("https://pbs.twimg.com/media/GJ20kvMWcAA0QQ0?format=jpg&name=900x900");
   
     }
     .homeInstagram4{
-        background-image: url("https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/430609337_795410482617305_39860885554114985_n.jpg?stp=dst-jpg_p480x480&_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=n_gB-VBkowoAX-5V9th&_nc_ht=scontent-lhr8-1.xx&oh=00_AfDwznB0OFCJH5og5vDbrJ6AA9jsXwfopVfD2EbldfkwOA&oe=660D58D0");
+        background-image: url("https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/377558977_823517232895589_8892516296607361469_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_ohc=93vd1JKeXH0Ab7d-HHx&_nc_ht=scontent-lhr8-2.xx&oh=00_AfAOEJp2iS2u384n0xJtxfrhI83n6xOpTxNkk_a2XsvLTQ&oe=6613C207");
       
     }
     .homeInstagram5{
-        background-image: url("https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/419044791_810465777778442_6912292583021108140_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=KrAK3mDCIg0AX9N4qNR&_nc_ht=scontent-lhr8-2.xx&oh=00_AfDLev87dQf-NmultzHla4sAKNdGghzRV12lPvN4pbBa1w&oe=660D36F9");
+        background-image: url("https://d2vykwbochoala.cloudfront.net/t_detail/https://d1sdeqoxcfgxl0.cloudfront.net/images/original/3a3a938e0df389c8b513f51980284030856a2f62b6a074b40d7fdfc9.jpg");
  
     }
     .homeInstagram6{
