--- a/public/model.css
+++ b/public/model.css
@@ -181,9 +181,16 @@
     }
     .modelCardImageCar{
         border-radius: 30px 30px 0px 0px;
+        min-width: 280px;
+        min-height: 280px;
     }
     .control-arrow::before{
         border: 9px solid black;
+    }
+    .modelBackgroundimage{
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 /* till 760px */
@@ -350,6 +357,8 @@ h1, p{
     }
 .modelCardImageCar{
         border-radius: 30px 30px 0px 0px;
+        min-width: 280px;
+        min-height: 280px;
 }
 .control-arrow::before{
     border: 9px solid black;
@@ -366,6 +375,16 @@ h1, p{
     display: flex;
     justify-content: center;
 }
+.modelBackgroundimage{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+}
+@media only screen and (min-width: 500px){
+   .modelCardImageCar{
+    min-height: 450px;
+   }
 }
 
 /*/////////////////////////////////////////////////////////////////////////*/
@@ -506,15 +525,13 @@ h1, p{
 
   .modelInlineDiv{             /* Carousel*/
     display: inline-flex;
-  }
+    
+      }
   li{
     display: flex;
   }
   .modelInlineDiv_Padding{
     padding-left: 30px;
-  }
-  .modelInlineDiv_Padding2{
-   padding-left: 30px;
   }
   .modelMiddle_ThirdDiv1{
     display: none;
@@ -558,9 +575,7 @@ h1, p{
 }
 .modelCardImageCar{
     border-radius: 30px 0px 0px 30px;
-    max-width: 500px;
     min-width: 400px;
-    height: 400px;
 }
 .model_4thDiv{        
         min-width: 760px;
@@ -584,7 +599,8 @@ h1, p{
        }
        .modelInlineDiv{             /* Carousel*/
         display: inline-flex;
-    }
+        justify-content: center;
+            }
     .modelDescriptionDiv{
         padding-left: 100px;
     }
@@ -597,9 +613,6 @@ h1, p{
     .modelInlineDiv_Padding{
         padding-left: 40px;
     }
-    .modelInlineDiv_Padding2{
-       padding-left: 50px;
-    }
       .modelMiddle_ThirdDiv1{
         display: none;
        }
@@ -608,6 +621,9 @@ h1, p{
        }
        .modelMiddle_ThirdDiv3{
        display: contents;
+       }
+       .modelCardImageCar{
+        min-width: 500px;
        }
 }
 
@@ -742,15 +758,13 @@ h1, p{
     
       .modelInlineDiv{             /* Carousel*/
         display: inline-flex;
-      }
+        justify-content: center;
+              }
       li{
         display: flex;
       }
       .modelInlineDiv_Padding{
         padding-left: 30px;
-      }
-      .modelInlineDiv_Padding2{
-       padding-left: 30px;
       }
       .modelMiddle_ThirdDiv1{
         display: none;
@@ -784,9 +798,7 @@ h1, p{
         }
     .modelCardImageCar{
         border-radius: 30px 0px 0px 30px;
-        max-width: 500px;
-        min-width: 400px;
-        height: 400px;
+        
     }
     .model_4thDiv{        
             min-width: 1300px;
@@ -894,9 +906,6 @@ h1, p{
       .modelInlineDiv_Padding{
         padding-left: 30px;
       }
-      .modelInlineDiv_Padding2{
-       padding-left: 30px;
-      }
       .modelMiddle_ThirdDiv1{
         display: none;
        }
@@ -941,5 +950,19 @@ h1, p{
     }
     .control-arrow::before{
         border: 9px solid black;
+    }
+    .modelDivTitle{
+        font-size: 40px;
+    }
+    .modelDivDescription{
+        font-size: 15px;
+    }
+    .modelLastDiv{
+        padding-left: 450px;
+        padding-right: 450px;
+    }
+    .modelImageCarSecond{
+        max-width: 750px;
+        max-height: 532px;
     }
 }
