A bunch of modifications

--- a/public/custom.css
+++ b/public/custom.css
@@ -85,6 +85,7 @@
     }
     .thumb{
         border-radius: 20px;
+        cursor: pointer;
     }
     
     /*Colors*/
@@ -191,6 +192,7 @@
     }
     .thumb{
         border-radius: 20px;
+        cursor: pointer;
     }
     
     /*Colors*/
@@ -251,14 +253,21 @@
         max-width: 1700px;
     }
     .customColorsDiv{
-        min-width: 500px;
+        min-width: 400px;
         max-width: 1100px;
     }
 }
-
+@media only screen and (min-width: 1800px){
+    .customColorsDiv{
+        min-width: 600px;
+    }
+}
 @media only screen and (min-width: 2200px){
     .customCarouselDiv{
         max-width: 1780px;
+    }
+    .customColorsDiv{
+        min-width: 750px;
     }
 }
 
